<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductlistFragment">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!-- Main Content -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="636dp" />

        <!-- Navigation Drawer -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_list" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basket" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabItem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabItem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile" />
            </com.google.android.material.tabs.TabLayout>

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/program_detail_banner_9_1" />

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabItem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Product List" />

            </com.google.android.material.tabs.TabLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:text="@string/friedchicken" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                app:srcCompat="@drawable/mar01220462p1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:text="@string/teriyakiburger"
                tools:ignore="TextSizeCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/kfc_4_teriyaki" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:text="@string/nugget" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                app:srcCompat="@drawable/d0k2quyvyaavkpr" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="258dp"
                tools:ignore="VisualLintBounds" />

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_menu"
            tools:ignore="VisualLintBounds" />

    </androidx.drawerlayout.widget.DrawerLayout>
</FrameLayout>